--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Check in Ca trực</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script src="app.js" defer></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+<title>Crew Check-In</title>
+
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0078D7">
+
+<style>
+ body{font:16px system-ui,Arial;margin:0;padding:20px;background:#f5f5f5}
+ h1{text-align:center;margin-top:0;margin-bottom:20px}
+ .form-group{margin-bottom:15px}
+ select,input,button{width:100%;padding:10px;font-size:16px;box-sizing:border-box;border:1px solid #ccc;border-radius:4px}
+ button{background:#0078D7;color:#fff;border:none;cursor:pointer}
+ #status{margin-top:15px;font-size:16px}
+</style>
 </head>
 <body>
-  <header>Check in Ca trực</header>
 
-  <section id="loginSec">
-    <div id="gSignIn"></div>
-  </section>
+<h1>Check-In Ca Trực</h1>
 
-  <section id="app" hidden>
-    <p id="welcome"></p>
-    <button id="btnStart">Bắt đầu ca</button>
-    <button id="btnEnd" hidden>Kết thúc ca</button>
-    <button id="btnInfo">Thông tin</button>
-    <button id="btnLogout">Đăng xuất</button>
-  </section>
+<div class="form-group">
+  <select id="unit"><option value="">— Đơn vị —</option></select>
+</div>
+
+<div class="form-group">
+  <select id="emp"><option value="">— Nhân viên —</option></select>
+</div>
+
+<div class="form-group">
+  <select id="shift">
+    <option value="CA01">CA01</option>
+    <option value="CA02">CA02</option>
+    <option value="CA03">CA03</option>
+  </select>
+</div>
+
+<div class="form-group">
+  <button id="btn" disabled>Bắt đầu ca</button>
+</div>
+
+<div id="status"></div>
+
+<script src="app.js"></script>
 </body>
 </html>
