--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>EVN-SPC Duty</title>
+  <title>MAP TRỰC CA</title>
 
   <!-- PWA -->
   <link rel="manifest" href="/manifest.webmanifest">
