--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<title>EVN-SPC Duty Map</title>
+<title>MAP TRỰC CA</title>
 <link rel="manifest" href="manifest.webmanifest">
 <meta name="theme-color" content="#0ea5e9">
 <style>
