--- a/index.html
+++ b/index.html
@@ -1,59 +1,79 @@
 <!doctype html>
 <html lang="vi">
 <head>
-  <!-- PWA & CSP (fix mixed-content/HTTPS) -->
-  <link rel="manifest" href="./manifest.webmanifest">
-  <meta name="theme-color" content="#0ea5e9">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<title>MAP TRỰC CA</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>MAP TRỰC CA</title>
+<!-- PWA -->
+<link rel="manifest" href="/manifest.webmanifest">
+<meta name="theme-color" content="#0ea5e9">
+<link rel="apple-touch-icon" href="/evn_logo.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <!-- PWA essentials -->
-  <link rel="manifest" href="./manifest.webmanifest">
-  <meta name="theme-color" content="#0ea5e9">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-
-  <!-- Icons (đã có sẵn trong repo) -->
-  <link rel="icon" sizes="192x192" href="./icon-192.png">
-  <link rel="icon" sizes="512x512" href="./icon-512.png">
-  <link rel="apple-touch-icon" href="./icon-192.png">
-
-  <style>
-    /* Không bắt buộc – chỉ để tránh flash trắng khi load */
-    html,body{height:100%;margin:0;background:#f6f7fb;color:#0f172a;font-family:system-ui,Roboto,Arial}
-  </style>
+<style>
+html,body{height:100%;margin:0;background:#f6f7fb;font-family:system-ui,Roboto,Arial}
+.app{position:fixed;inset:0;display:flex;flex-direction:column}
+header{position:fixed;left:8px;top:8px;z-index:10;display:flex;gap:8px}
+button{padding:10px 14px;border-radius:999px;border:1px solid #e5e7eb;background:#fff;font-weight:800;cursor:pointer}
+#wrap{flex:1;position:relative}
+iframe{position:absolute;inset:0;border:0;width:100%;height:100%}
+.offline{position:absolute;inset:0;display:none;align-items:center;justify-content:center;background:#fff}
+.offline.show{display:flex}
+</style>
 </head>
 <body>
+<div class="app">
+<header>
+<button id="btnReload">Làm mới</button>
+<button id="btnOpen">Mở ngoài trình duyệt</button>
+</header>
 
-  <!-- ===== Giữ NGUYÊN toàn bộ mã ứng dụng hiện có của anh ở đây =====
-       Nếu trước nay index.html đã chứa toàn bộ app (Leaflet, v.v.) thì
-       không cần đổi gì phần thân trang. Chỉ đảm bảo có <script> đăng ký SW
-       ngay bên dưới. 
-  -->
+<div id="wrap">
+<!-- thay URL này bằng Web App Apps Script của anh -->
+<iframe id="app"
+src="https://script.google.com/macros/s/AKfycbz4wd2wDQboCASWQIsczvoI68FSMLVjKDn9WZnAzP38pY_l2H3p7WdPoCtcjAYnQMI_Jg/exec"
+allow="geolocation *; fullscreen *; camera *; microphone *; clipboard-read; clipboard-write; accelerometer; gyroscope; magnetometer"
+referrerpolicy="no-referrer"></iframe>
 
-  <!-- Đăng ký Service Worker đúng scope (bắt buộc cho PWABuilder) -->
+<div id="offline" class="offline">
+<div style="text-align:center">
+<h2>Không có mạng</h2>
+<p>Ứng dụng cần kết nối Internet để chạy.</p>
+<button onclick="location.reload()">Thử lại</button>
+</div>
+</div>
+</div>
+</div>
+
 <script>
-  // Đăng ký SW với scope tuyệt đối theo repo GitHub Pages (fix "registration timeout")
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', async () => {
-      try {
-        // VD site: https://dlthoibinh.github.io/crew-checkin-pwa/
-        // scope sẽ là "/crew-checkin-pwa/"
-        const basePath = location.pathname.replace(/[^/]+$/, '');
-        const swUrl    = basePath + 'sw.js';
-        const scope    = basePath;                 // ví dụ "/crew-checkin-pwa/"
+// Nút "Làm mới": xóa cache/app state & ép reload cứng
+document.getElementById('btnReload').onclick = async () => {
+try{ localStorage.clear(); sessionStorage.clear(); }catch(_){}
+if ('caches' in window) {
+const keys = await caches.keys();
+await Promise.all(keys.map(k => caches.delete(k)));
+}
+const url = location.href.split('#')[0].replace(/\?r=\d+$/,'');
+location.replace(url + (url.includes('?') ? '&' : '?') + 'r=' + Date.now());
+};
 
-        const reg = await navigator.serviceWorker.register(swUrl, { scope });
-        await navigator.serviceWorker.ready;       // đợi active
-        console.log('SW OK @', reg.scope);
-      } catch (e) {
-        console.warn('SW register failed', e);
-      }
-    });
-  }
+// Mở ngoài (đề phòng khi cần đăng nhập Google)
+document.getElementById('btnOpen').onclick = () => {
+window.open(document.getElementById('app').src, '_blank', 'noopener,noreferrer');
+};
+
+// Đăng ký SW
+if ('serviceWorker' in navigator) {
+window.addEventListener('load', () => navigator.serviceWorker.register('/sw.js'));
+}
+
+// UI offline
+const setOfflineUI = on => document.getElementById('offline').classList.toggle('show', !!on);
+window.addEventListener('online',  ()=>setOfflineUI(false));
+window.addEventListener('offline', ()=>setOfflineUI(true));
+setOfflineUI(!navigator.onLine);
 </script>
 </body>
 </html>
